<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">
    <!--使用相对布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/item_lay_img_desc"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/image"
            android:text="@string/item_lay01"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_lay01_author"
            android:textSize="13sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>